# capnp-es

./: .prettierignore  README.md  build.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.mjs
.github/workflows/: ci.yml
docs/: rpc-level1-plan.md  rpc-level2-plan.md  rpc-level3-network-profile.md
playground/: addressbook.d.ts  addressbook.js  addressbook.ts
scripts/: build-std.mjs  check-serialization-layering.mjs  test-interop-cpp.mjs  test-pack.mjs
src/: constants.ts  errors.ts  index.ts  init.ts  metadata.ts
src/capnp/: persistent.ts  rpc-twoparty.ts  rpc.ts  schema.ts  stream.ts  ts.ts
src/compiler/: cli.ts  compiler.ts  constants.ts  index.ts  node-util.ts  options.ts
src/debug/: dump.ts
src/node/: index.ts
src/rpc/: answer.ts  call-queue.ts  capability.ts  client.ts  conn.ts  error-client.ts  finalize.ts  immediate-answer.ts  import-client.ts  index.ts  join.ts  level3.ts  local-answer-client.ts  method-error.ts  method.ts  network.ts  persistence.ts  persistent-interface.ts  promise-export-client.ts  question.ts  queue-client.ts  ref.ts  refcount.ts  rpc-error.ts  server.ts
src/serialization/: cap-table.ts  message.ts  segment.ts
test/bench/: bench.ts  profile.ts
test/compiler/: absolute-imports.spec.ts  compile.spec.ts  metadata.spec.ts  sandstorm-schemas.spec.ts
test/fixtures/: bigintbag.ts  capnp-runtime-shim.ts  (+21 more)
test/interop/cpp/: CMakeLists.txt
test/interop/cpp/capnp/: sandstorm-powerbox-flow.capnp  web-session-interop.capnp
test/interop/cpp/src/: cpp_vat_client.cxx  cpp_vat_server.cxx
(+60 files in other folders)
